[package]
name = "guava-server"
version = "0.1.0"
edition = "2018"
authors = ["Pelanyo Kamara <pkamara@disroot.org>"]

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1"
futures = "0.3"

[dependencies.mongodb]
version = "2.0.0-beta.3"
default-features = false
features = ["async-std-runtime"]